[08/02/2022] Added last minute changes

--- a/TweetsTrain.ipynb
+++ b/TweetsTrain.ipynb
@@ -5,12 +5,19 @@
    "metadata": {},
    "source": [
     "<h2>Training the Classifier/Filter</h2>\n",
-    "Currently we are trying to train the whole classifier with a single function, the train function. Next is we will call the pipeline to filter and  clean all the tweets we need to clean."
+    "Currently we are trying to train the whole classifier with a single function, the train function. Next is we will call the pipeline to filter and  clean all the tweets we need to clean. After this, we will perform tweet cleaning\n",
+    "\n",
+    "<h4>Tweet Cleaning</h4>\n",
+    "This is where the real operation starts. We will filter the tweets based on the saved model, and clean them in a proper manner. The steps are as follows:\n",
+    "\n",
+    "* Filter Tweets (filter_pipeline)\n",
+    "* Clean Tweets (data_pipeline)\n",
+    "* format Tweets to pass in our model (data_pipeline)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -25,8 +32,8 @@
       "\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.79      0.87      0.82       434\n",
-      "           1       0.79      0.68      0.73       322\n",
+      "           0       0.78      0.87      0.83       434\n",
+      "           1       0.80      0.67      0.73       322\n",
       "\n",
       "    accuracy                           0.79       756\n",
       "   macro avg       0.79      0.77      0.78       756\n",
@@ -40,81 +47,6 @@
     "\n",
     "\n",
     "train()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from train.frequency import train as train_freq\n",
-    "\n",
-    "train_freq()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2>Tweet Cleaning</h2>\n",
-    "This is where the real operation starts. We will filter the tweets based on the saved model, and clean them in a proper manner. The steps are as follows:\n",
-    "\n",
-    "* Filter Tweets (filter_pipeline)\n",
-    "* Clean Tweets (data_pipeline)\n",
-    "* format Tweets to pass in our model (data_pipeline)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "with open(\"./saved_models/SVMClassifier.pkl\", 'rb') as file:\n",
-    "    pickle_model = pickle.load(file)\n",
-    "        \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nclass_report = classification_report(df_tweets_en[\"target\"], df_tweets_en[\"vote_pred\"])\\nprint(\\'\\n Accuracy: \\', accuracy_score(df_tweets_en[\"target\"], df_tweets_en[\"vote_pred\"]))\\nprint(\\'\\nClassification Report for\\')\\nprint(\\'======================================================\\')\\nprint(\\'\\n\\', class_report)\\n'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "from train.classifier import *\n",
-    "from sklearn.metrics import accuracy_score, classification_report\n",
-    "\n",
-    "\n",
-    "df_tweets_en = pd.read_csv(\"./data/disaster_tweets_en.csv\")\n",
-    "df_tweets_en[\"rawContent\"] = df_tweets_en[\"rawContent\"].astype(str)\n",
-    "\n",
-    "\n",
-    "X_testset = Cleaner(\n",
-    "        ds_train=df_tweets_en,\n",
-    "        train_column=\"rawContent\",\n",
-    "        test_column=\"keyword\",\n",
-    "        type=\"test\",\n",
-    "\n",
-    "    ).X\n",
-    "predictions = pickle_model.predict(X_testset)\n",
-    "\n",
-    "\n",
-    "df_tweets_en[\"vote_pred\"] = predictions\n",
-    "df_tweets_en.to_csv('./data/disaster_tweets_en.csv', index=False)"
    ]
   },
   {
@@ -136,10 +68,162 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13777\n",
+      "\n",
+      " Accuracy:  0.9412191582002902\n",
+      "\n",
+      "Classification Report for\n",
+      "======================================================\n",
+      "\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      0.96      0.98       201\n",
+      "           1       0.98      0.93      0.95       191\n",
+      "           2       0.99      0.99      0.99       189\n",
+      "           3       0.94      0.91      0.92       181\n",
+      "           4       0.89      0.90      0.90       226\n",
+      "           5       0.96      0.98      0.97       195\n",
+      "           6       0.85      0.92      0.88       195\n",
+      "\n",
+      "    accuracy                           0.94      1378\n",
+      "   macro avg       0.94      0.94      0.94      1378\n",
+      "weighted avg       0.94      0.94      0.94      1378\n",
+      "\n",
+      "\n",
+      " Accuracy:  0.9412191582002902\n",
+      "\n",
+      "Classification Report for\n",
+      "======================================================\n",
+      "\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      0.96      0.98       201\n",
+      "           1       0.98      0.93      0.96       191\n",
+      "           2       0.99      0.99      0.99       189\n",
+      "           3       0.92      0.91      0.91       181\n",
+      "           4       0.93      0.88      0.90       226\n",
+      "           5       0.96      0.98      0.97       195\n",
+      "           6       0.83      0.93      0.88       195\n",
+      "\n",
+      "    accuracy                           0.94      1378\n",
+      "   macro avg       0.94      0.94      0.94      1378\n",
+      "weighted avg       0.94      0.94      0.94      1378\n",
+      "\n",
+      "\n",
+      " Accuracy:  0.137155297532656\n",
+      "\n",
+      "Classification Report for\n",
+      "======================================================\n",
+      "\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00       201\n",
+      "           1       0.00      0.00      0.00       191\n",
+      "           2       0.14      1.00      0.24       189\n",
+      "           3       0.00      0.00      0.00       181\n",
+      "           4       0.00      0.00      0.00       226\n",
+      "           5       0.00      0.00      0.00       195\n",
+      "           6       0.00      0.00      0.00       195\n",
+      "\n",
+      "    accuracy                           0.14      1378\n",
+      "   macro avg       0.02      0.14      0.03      1378\n",
+      "weighted avg       0.02      0.14      0.03      1378\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Jayra\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\sklearn\\metrics\\_classification.py:1308: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "C:\\Users\\Jayra\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\sklearn\\metrics\\_classification.py:1308: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "C:\\Users\\Jayra\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\sklearn\\metrics\\_classification.py:1308: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from train.frequency import train as train_freq\n",
+    "\n",
+    "train_freq()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Filipino Vocabulary</h4>\n",
+    "Testing English vocab model to Taglish Corpus "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13816\n"
+     ]
+    }
+   ],
+   "source": [
+    "from train.frequency import test_accuracy\n",
+    "\n",
+    "test_accuracy()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Results</h4>\n",
+    "We can see that our results tends to favour the Frequency distribution since our data is controlled, we have set of keywords related to each other so some keywords may be present to the other keyworded tweet, which brought about the good results since our feature vector tends to see this similarity.\n",
+    "\n",
+    "<h4>Error Analysis</h4>\n",
+    "We had a few errors before getting about a good result, we divide them according to the process done\n",
+    "\n",
+    "Preprocessing\n",
+    "* Lack of Handling the appropriate stopwords for the dataset\n",
+    "* Spellchecker\n",
+    "* Appropriate Root Word stem\n",
+    "* make tweets unique\n",
+    "\n",
+    "Feature Vector (LDA)\n",
+    "* Additional N time for transposing and transforming Cohesion Pair\n",
+    "* took 30 mins to train 13,890 unique tweets\n",
+    "\n",
+    "Feature Vector (TF-IDF)\n",
+    "* Less transposing done by reshaping the features into the same Y dim\n",
+    "* Used l2 regularization to lessen the complexity of the model\n",
+    "* Used bounded frequency to lessen the occurence of unhandled stop words\n",
+    "\n",
+    "Model (Disaster of Not)\n",
+    "* Best model that has a score of 0.7883597883597884, is SVM\n",
+    "* Out of 5 models, worst result kNN with a score of 0.525\n",
+    "\n",
+    "Model (Topic Segmentations)\n",
+    "* Best model that has a score of 0.9412191582002902, is tie to both Logistic Regression and SGD\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from train.frequency import test_accuracy\n",
     "with open(\"./saved_models/SGDHuberFreq.pkl\", 'rb') as file:\n",
     "    freq_model = pickle.load(file)\n",
     "\n",
@@ -149,15 +233,7 @@
     "        column=\"rawContent\"\n",
     "    ).fit_testset()\n",
     "\n",
-    "predictions_freq = freq_model.predict(X_testset)\n",
-    "\n",
-    "df_tweets_en[\"class_pred\"] = predictions_freq\n",
-    "\n",
-    "class_report = classification_report(df_tweets_en[\"keyword\"], df_tweets_en[\"class_pred\"])\n",
-    "print('\\n Accuracy: ', accuracy_score(df_tweets_en[\"keyword\"], df_tweets_en[\"class_pred\"]))\n",
-    "print('\\nClassification Report for')\n",
-    "print('======================================================')\n",
-    "print('\\n', class_report)\n"
+    "test_accuracy()"
    ]
   },
   {
@@ -169,9 +245,10 @@
     "import numpy as np\n",
     "\n",
     "arr = np.array([1,2,3,4,5,6])\n",
+    "print(arr.shape)\n",
     "arr = arr.reshape(3,2)\n",
-    "\n",
-    "arr[:,1]"
+    "print(arr)\n",
+    "print(arr.shape)"
    ]
   },
   {
