[08/02/2022] Added last minute changes for tagalog

--- a/TweetsTrain.ipynb
+++ b/TweetsTrain.ipynb
@@ -59,10 +59,9 @@
     "We will perform the following\n",
     "\n",
     "*  term frequency–inverse document frequency(TF-IDF) to transpose the words into vectors of frequency\n",
-    "* 3 models to test\n",
+    "* 2 models to test\n",
     "    * Logistic Regression\n",
     "    * SGD Classfier\n",
-    "    * SGD Modified Huber\n",
     "* Check the accuracy metrics "
    ]
   },
@@ -167,14 +166,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13816\n"
+      "13791\n",
+      "\n",
+      " Accuracy:  0.5123188405797101\n",
+      "\n",
+      "Classification Report for\n",
+      "======================================================\n",
+      "\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.90      0.50      0.64       198\n",
+      "           1       0.71      0.69      0.70       182\n",
+      "           2       0.90      0.59      0.72       190\n",
+      "           3       0.64      0.54      0.59       192\n",
+      "           4       0.41      0.45      0.43       224\n",
+      "           5       0.00      0.00      0.00       203\n",
+      "           6       0.30      0.86      0.44       191\n",
+      "\n",
+      "    accuracy                           0.51      1380\n",
+      "   macro avg       0.55      0.52      0.50      1380\n",
+      "weighted avg       0.54      0.51      0.50      1380\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Jayra\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\sklearn\\metrics\\_classification.py:1308: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "C:\\Users\\Jayra\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\sklearn\\metrics\\_classification.py:1308: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "C:\\Users\\Jayra\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\sklearn\\metrics\\_classification.py:1308: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
    ],
@@ -223,25 +254,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from train.frequency import test_accuracy\n",
-    "with open(\"./saved_models/SGDHuberFreq.pkl\", 'rb') as file:\n",
-    "    freq_model = pickle.load(file)\n",
-    "\n",
-    "print(type(freq_model))\n",
-    "X_testset = Cleaner(\n",
-    "        ds_train=df_tweets_en,\n",
-    "        column=\"rawContent\"\n",
-    "    ).fit_testset()\n",
-    "\n",
-    "test_accuracy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import numpy as np\n",
     "\n",
     "arr = np.array([1,2,3,4,5,6])\n",
@@ -250,13 +262,6 @@
     "print(arr)\n",
     "print(arr.shape)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
